--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
-<body class="body" onload="loadPokemon()">
+<body class="body" onload="loadPokemon()"> 
     <section class="header" id="header">
         <nav class="header-nav">
             <span class="yourpokedex-Span" style="font-size: 2.4rem; color: white;">
@@ -21,6 +21,11 @@
         </nav>
     </section>
     <section>
+        <div id="loadingScreen" class="loadingScreen__container">
+            <span class="loader">
+                <span class="loader-inner"></span>
+            </span>
+        </div>
         <div id="pokedex">
         </div>
     </section>
