--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>The Kanto Pokédex</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="body" onload="loadPokemon()"> 
@@ -34,8 +31,8 @@
     </section>
     <section>
         <figure onclick="playBackgroundSong()" class="pikachu-Container">
-            <img class="click-img" src="img/click.png">
-            <img class="pikachu-img" src="img/pikachu.jpg">
+            <img class="click-img" src="/assets/img/click.png">
+            <img class="pikachu-img" src="/assets/img/pikachu.jpg">
         </figure>
     </section>
 </body>
