--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </section>
     <section>
         <figure onclick="playBackgroundSong()" class="pikachu-Container">
-            <img class="click-img" src="/assets/img/click.png">
-            <img class="pikachu-img" src="/assets/img/pikachu.jpg">
+            <img class="click-img" src="assets/img/click.png">
+            <img class="pikachu-img" src="assets/img/pikachu.jpg">
         </figure>
     </section>
 </body>
