--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="https://kit.fontawesome.com/f45b0c0950.js" crossorigin="anonymous"></script>
 </head>
 <body class="body" onload="loadPokemon()"> 
     <section class="header" id="header">
